package com.project;

public class ExampleModule4 implements Module{

    public ExampleModule4(){
        display();
    }

    @Override
    public void display() {
        System.out.println("Example Module 4");
    }
}
